--- a/styles/style.css
+++ b/styles/style.css
@@ -1,44 +1,9 @@
 h1 {
+  color: blue;
+  background-color: yellow;
+  border: 1px solid black;
+}
+
+p {
   color: red;
-}
-
-p,
-li {
-  color: green;
-}
-
-li {
-    list-style-type: none;
-}
-
-li.one,
-span.one {
-    color: orange;
-    font-weight: bold;
-}
-
-li em {
-    color: rebeccapurple;
-}
-
-h1 + p {
-    font-size: 150%;
-}
-
-a:link {
-    color: pink;
-}
-
-a:visited {
-    color: green;
-}
-
-a:hover {
-    text-decoration: none;
-}
-
-body h1 + p .one {
-    color: yellow;
-    background-color: black;
-    padding: 5px;
 }
