--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,8 @@
 h1 {
-  color: blue;
-  background-color: yellow;
-  border: 1px solid black;
+    color: hotpink;
+    border-bottom: purple 10px;
 }
 
-p {
-  color: red;
+h2 {
+    
 }
